<?xml version="1.0"?>
<package>
  <name>lane_tracker</name>
  <version>0.0.0</version>
  <description>Package to track lanes</description>

  <maintainer email="mp.michael.person@gmail.com">Michael Person</maintainer>

  <license>TODO</license>

  <author email="mp.michael.person@gmail.com">Michael Person</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
